# grafeo-mcp

./: .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  codecov.yml  pyproject.toml
.github/workflows/: ci.yml
examples/: claude_code_config.json  claude_desktop_config.json  vscode_mcp.json
src/grafeo_mcp/: __init__.py  server.py
src/grafeo_mcp/prompts/: templates.py
src/grafeo_mcp/resources/: _helpers.py  nodes.py  schema.py
src/grafeo_mcp/tools/: _helpers.py  algorithms.py  batch.py  graph.py  query.py  search.py  vector.py
tests/: conftest.py  test_prompts.py  test_read_only.py  test_resources.py  test_server.py  test_tools_algorithms.py  test_tools_batch.py  test_tools_graph.py  test_tools_query.py  test_tools_search.py  test_tools_vector.py
