[project]
name = "grafeo-mcp"
version = "0.1.1"
description = "MCP server exposing GrafeoDB graph database to AI agents"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
authors = [{ name = "S.T. Grond", email = "dev@grafeo.dev" }]
keywords = ["mcp", "graph-database", "grafeo", "ai-agents", "copilot"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Database :: Database Engines/Servers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "grafeo>=0.5",
    "mcp>=1.26,<2",
]

[project.urls]
Homepage = "https://grafeo.dev/"
Repository = "https://github.com/GrafeoDB/grafeo-mcp"

[project.optional-dependencies]
cli = ["mcp[cli]>=1.26,<2"]

[project.scripts]
grafeo-mcp = "grafeo_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/grafeo_mcp"]

# ── Ruff ──────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

# ── Ty ────────────────────────────────────────────────────────────────
[tool.ty.environment]
python-version = "3.12"

# ── Pytest ────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=grafeo_mcp --cov-report=term-missing"

# ── Coverage ─────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["grafeo_mcp"]
omit = ["*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

# ── UV ────────────────────────────────────────────────────────────────
[tool.uv]
dev-dependencies = [
    "pytest>=9",
    "pytest-asyncio>=1.3",
    "pytest-cov>=7",
    "ruff>=0.15",
    "ty>=0.0.16",
    "prek>=0.3",
]
